--- a/package.json
+++ b/package.json
@@ -10,6 +10,14 @@
     "react-scripts": "3.4.3"
   },
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint-config-babel": "^9.0.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-standard": "^4.0.2",
+    "prettier": "^2.1.2",
     "typescript": "3.8.3"
   },
   "scripts": {
